[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Backgrounds/BG1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/Main Menu/ExploreNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Main Menu/LessonsNormal.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Title.png" type="Texture" id=4]
[ext_resource path="res://Display Scenes/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Buttons/Main Menu/ExploreHover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Main Menu/LessonsHover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/Main Menu/HelpHover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Main Menu/HelpNormal.png" type="Texture" id=9]
[ext_resource path="res://Object Scenes/InOverlay.tscn" type="PackedScene" id=10]
[ext_resource path="res://Placeholder/About.png" type="Texture" id=11]
[ext_resource path="res://Placeholder/AboutHover.png" type="Texture" id=12]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="TextureRect" parent="HBoxContainer"]
margin_left = 80.0
margin_right = 715.0
margin_bottom = 720.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 719.0
margin_right = 1199.0
margin_bottom = 720.0
alignment = 1

[node name="Explore" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 480.0
margin_bottom = 346.0
rect_min_size = Vector2( 480, 260 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Lesson" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 480.0
margin_bottom = 490.0
rect_min_size = Vector2( 480, 140 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Help" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 480.0
margin_bottom = 634.0
rect_min_size = Vector2( 480, 140 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="About" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 595.0
margin_right = 126.0
margin_bottom = 1315.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="InOverlay" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="button_down" from="HBoxContainer/VBoxContainer/Explore" to="." method="_on_Explore_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/Lesson" to="." method="_on_Lesson_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/Help" to="." method="_on_Help_button_down"]
[connection signal="button_down" from="About" to="." method="_on_About_button_down"]
